test/conformance/kuttl/exceptions/events-creation/03-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-exception-events-creation-ns
---
apiVersion: v1
kind: Pod
metadata:
  name: policy-exception-events-creation-pod
  namespace: policy-exception-events-creation-ns
spec:
  containers:
  - image: nginx
    name: nginx
