test/conformance/kuttl/exceptions/events-creation/05-assert.yaml
apiVersion: v1
involvedObject:
  apiVersion: kyverno.io/v2alpha1
  kind: PolicyException
  name: allow-latest
  namespace: default
kind: Event
metadata:
  namespace: default
reason: PolicySkipped
source:
  component: kyverno-admission
type: Normal
---
apiVersion: v1
involvedObject:
  apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: disallow-latest-tag-events-creation
kind: Event
metadata:
  namespace: default
reason: PolicySkipped
source:
  component: kyverno-admission
type: Normal
