test/conformance/kuttl/exceptions/events-creation/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag-events-creation
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
